--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "start": "node dist/server/node-build.mjs",
     "test": "vitest --run",
     "format.fix": "prettier --write .",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest --watch"
   },
   "dependencies": {
     "dotenv": "^17.2.0",
@@ -63,6 +67,9 @@
     "@swc/core": "^1.11.24",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^5.56.2",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.5",
@@ -70,6 +77,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.176.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -79,7 +87,9 @@
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.6.2",
     "globals": "^15.9.0",
+    "happy-dom": "^18.0.1",
     "input-otp": "^1.2.4",
+    "jsdom": "^27.0.0",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "postcss": "^8.5.6",
@@ -101,6 +111,6 @@
     "typescript": "^5.5.3",
     "vaul": "^0.9.3",
     "vite": "^6.2.2",
-    "vitest": "^3.1.4"
+    "vitest": "^3.2.4"
   }
 }
